# The-Scrumfather

./: .gitignore  README.md  database.db  docker-compose.yaml  documentation.md  main.py  makefile  project_1_data.json  pyproject.toml  tui.py
llama/: docker-compose.yaml  entrypoint.sh  llama.Dockerfile
output/: architecture.md  arquitect.md  assign_tasks.md  db_structure.md  db_strucure.md  devops.md  project_brief.md  project_documentation.md  user_stories.md
src/: llm.py
src/agents/: architect_agent.py  db_designer_agent.py  devops_adviser_agent.py  product_manager_agent.py  product_owner.py  task_planner_agent.py  tech_lead.py
src/ai/: agents.py  llm.py  tasks.py
src/database/: connection.py
src/models/: documentation_theme.py  projects.py  user.py
src/routes/: auth.py
src/schemas/: projects.py  user.py
src/tasks/: assign_user_stories_task.py  create_db_structure_task.py  create_user_stories_task.py  devops_task.py  initial_task.py
src/utils/: auth.py  generate_documentation.py  generate_plan.py
tests/: conftest.py  test_basic.py
