[project]
name = "The-Scrumfather"
version = "0.1.0"
description = "i will make a so good tasks, that your only option is accept them"
authors = [
    {name = "mccartheney mendes",email = "mccartheney@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai (>=0.114.0,<0.115.0)",
    "langchain-openai (>=0.3.13,<0.4.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "textual (>=3.1.1,<4.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
